Fixed some spacing in mobile.

--- a/less/global.less
+++ b/less/global.less
@@ -53,6 +53,10 @@ a {
   font-size:1.5rem;
 }
 
+a:visited {
+  color:grey;
+}
+
 
 
 body {
